--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<style>
+    :root {
+  --main-background: rgb(192, 245, 241);
+  --main-foreground: rgb(16, 65, 59);
+  --pane-padding: 5px 42px;
+}
+    body{
+        font-family: "Playfair Display", serif;
+        background-color: var(--main-background);
+    color: var(--main-foreground);
+
+    }
+    h1,h2{
+        font-family: "Roboto", sans-serif;
+    }
+</style>
 </head>
 
 <body>
